--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@indieasy.software/indieasy-engine",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Core engine library.",
   "main": "build/index.js",
   "scripts": {
@@ -47,16 +47,15 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
+    "redux": "^4.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.0"
   },
-  "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">= 16.12.0",
     "react-dom": ">= 16.8.6",
