--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@indieasy.software/indieasy-engine",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Core engine library.",
   "main": "build/index.js",
   "scripts": {
@@ -53,7 +53,8 @@
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {},
   "peerDependencies": {
